Создано в Colab. ДЗ№6

--- a/Тема_6.ipynb
+++ b/Тема_6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMwM9D8qqqQ65sFB0Um83ir"
+      "authorship_tag": "ABX9TyOSjztNVmzRkZtlU/PTy0X8"
     },
     "kernelspec": {
       "name": "python3",
@@ -20,129 +20,145 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "# Функция для классификации возраста\n",
-        "def classify_age(age):\n",
+        "# Загрузка данных из CSV-файла\n",
+        "csv_file_path = '/content/web_clients_correct_доп_материал_к_тема_6__7__итоговое_задание.csv'\n",
+        "df = pd.read_csv(csv_file_path)\n",
+        "\n",
+        "# Функция для анализа возраста\n",
+        "def analyze_age(age):\n",
         "    if age > 25:\n",
         "        return \"Старше 25\"\n",
         "    else:\n",
         "        return \"Младше или равен 25\"\n",
         "\n",
-        "# Функция для применения классификации возраста к столбцу\n",
-        "def apply_age_classification(df, column_name):\n",
-        "    df[f'{column_name}_category'] = df[column_name].apply(classify_age)\n",
-        "    return df\n",
+        "# Применить классификацию возраста к столбцу 'age'\n",
+        "df['age_category'] = df['age'].apply(analyze_age)\n",
         "\n",
-        "# Основная функция программы\n",
-        "def main():\n",
-        "    # Запросить у пользователя вставить данные\n",
-        "    print(\"Пожалуйста, вставьте 15 строк из таблицы. Каждая строка должна быть на новой строке.\")\n",
-        "    print(\"Формат: name, device_type, browser, sex, age, bill, region\")\n",
-        "    print(\"Пример: John, Mobile, Chrome, Male, 25, 100, Europe\")\n",
-        "\n",
-        "    data = []\n",
-        "    for i in range(15):\n",
-        "        while True:\n",
-        "            row = input(f\"Введите строку {i+1}: \")\n",
-        "            try:\n",
-        "                # Преобразовать строку в список\n",
-        "                row_data = row.split(', ')\n",
-        "                # Проверка количества полей\n",
-        "                if len(row_data) != 7:\n",
-        "                    raise ValueError(\"Неправильное количество полей\")\n",
-        "                # Преобразование возраста в числовой тип\n",
-        "                row_data[4] = int(row_data[4])\n",
-        "                data.append(row_data)\n",
-        "                break\n",
-        "            except ValueError as e:\n",
-        "                print(f\"Неправильный формат: {e}. Пожалуйста, введите данные снова.\")\n",
-        "\n",
-        "    # Создать DataFrame из введенных данных\n",
-        "    column_names = [\"name\", \"device_type\", \"browser\", \"sex\", \"age\", \"bill\", \"region\"]\n",
-        "    df = pd.DataFrame(data, columns=column_names)\n",
-        "\n",
-        "    # Преобразовать столбец 'bill' в числовой тип\n",
-        "    df['bill'] = pd.to_numeric(df['bill'])\n",
-        "\n",
-        "    # Применить классификацию возраста\n",
-        "    df = apply_age_classification(df, 'age')\n",
-        "\n",
-        "    print(df)\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    main()"
+        "# Вывод первых 15 строк данных\n",
+        "print(df.head(15))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "eA043lNdb-kx",
-        "outputId": "1ef1abf7-ff3a-4432-c322-6625f16ae876"
+        "id": "TNgryH9HuidX",
+        "outputId": "5588e9da-328b-40c9-d453-61c21af02dec"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Пожалуйста, вставьте 15 строк из таблицы. Каждая строка должна быть на новой строке.\n",
-            "Формат: name, device_type, browser, sex, age, bill, region\n",
-            "Пример: John, Mobile, Chrome, Male, 25, 100, Europe\n",
-            "Введите строку 1: Allen  Miss. Elisabeth Walton,mobile,Chrome,female,29,885,St Louis: MO Allison  Master. Hudson Trevor,tablet,Opera,male,48,850,Montreal: PQ / Chesterville: ON Allison  Miss. Helen Loraine,laptop,Firefox,female,48,1034,Montreal: PQ / Chesterville: ON Allison  Mr. Hudson Joshua Creighton,desktop,Internet Explorer,male,30,214,Montreal: PQ / Chesterville: ON Allison  Mrs. Hudson J C (Bessie Waldo Daniels),laptop,Firefox,female,25,993,Montreal: PQ / Chesterville: ON Anderson  Mr. Harry,mobile,Firefox,male,48,371,New York: NY Andrews  Miss. Kornelia Theodosia,mobile,Chrome,female,63,1126,Hudson: NY Andrews  Mr. Thomas Jr,tablet,Internet Explorer,male,39,867,Belfast: NI Appleton  Mrs. Edward Dale (Charlotte Lamson),desktop,Chrome,female,53,552,Bayside: Queens: NY Artagaveytia  Mr. Ramon,mobile,Firefox,male,71,926,Montevideo: Uruguay Astor  Col. John Jacob,desktop,Chrome,male,47,100,New York: NY Astor  Mrs. John Jacob (Madeleine Talmadge Force),laptop,Opera,female,48,254,New York: NY Aubart  Mme. Leontine Pauline,tablet,Firefox,female,24,587,Paris: France \"Barber  Miss. Ellen \"\"Nellie\"\"\",mobile,Firefox,female,26,1009,- Barkworth  Mr. Algernon Henry Wilson,laptop,Chrome,male,80,723,Hessle: Yorks\n",
-            "Неправильный формат: Неправильное количество полей. Пожалуйста, введите данные снова.\n",
-            "Введите строку 1: Allen  Miss. Elisabeth Walton,mobile,Chrome,female,29,885,St Louis: MO\n",
-            "Неправильный формат: Неправильное количество полей. Пожалуйста, введите данные снова.\n",
-            "Введите строку 1: Allen  Miss. Elisabeth Walton,mobile,Chrome,female,29,885,St Louis\n",
-            "Неправильный формат: Неправильное количество полей. Пожалуйста, введите данные снова.\n",
-            "Введите строку 1: Elisabeth Walton,mobile,Chrome,female,29,885,St Louis: MO\n",
-            "Неправильный формат: Неправильное количество полей. Пожалуйста, введите данные снова.\n",
-            "Введите строку 1: Elisabeth Walton, mobile, Chrome, female, 29, 885, St Louis: MO\n",
-            "Введите строку 2: Hudson Trevor, tablet, Opera, male, 48, 850, Montreal: PQ\n",
-            "Введите строку 3: Helen Loraine, laptop, Firefox, female, 48, 1034, Montreal: PQ\n",
-            "Введите строку 4: Hudson Joshua Creighton, desktop, Internet Explorer, male, 30, 214, Montreal: PQ\n",
-            "Введите строку 5: Hudson J C (Bessie Waldo Daniels), laptop, Firefox, female, 25, 993, Montreal: PQ\n",
-            "Введите строку 6: Harry, mobile, Firefox, male, 48, 371, New York: NY\n",
-            "Введите строку 7: Kornelia Theodosia, mobile, Chrome, female, 63, 1126, Hudson: NY\n",
-            "Введите строку 8: Thomas Jr, tablet, Internet Explorer, male, 39, 867, Belfast: NI\n",
-            "Введите строку 9: Edward Dale (Charlotte Lamson), desktop, Chrome, female, 53, 552, Bayside: Queens: NY\n",
-            "Введите строку 10: Ramon, mobile, Firefox, male, 71, 926, Montevideo: Uruguay\n",
-            "Введите строку 11: John Jacob, desktop, Chrome, male, 47, 100, New York: NY\n",
-            "Введите строку 12: John Jacob (Madeleine Talmadge Force), laptop, Opera, female, 48, 254, New York: NY\n",
-            "Введите строку 13: Leontine Pauline, tablet, Firefox, female, 24, 587, Paris: France\n",
-            "Введите строку 14: Ellen \"\"Nellie\"\"\", mobile, Firefox, female, 26, 1009, -\n",
-            "Введите строку 15: Algernon Henry Wilson, laptop, Chrome, male, 80, 723, Hessle: Yorks\n",
-            "                                     name device_type            browser  \\\n",
-            "0                        Elisabeth Walton      mobile             Chrome   \n",
-            "1                           Hudson Trevor      tablet              Opera   \n",
-            "2                           Helen Loraine      laptop            Firefox   \n",
-            "3                 Hudson Joshua Creighton     desktop  Internet Explorer   \n",
-            "4       Hudson J C (Bessie Waldo Daniels)      laptop            Firefox   \n",
-            "5                                   Harry      mobile            Firefox   \n",
-            "6                      Kornelia Theodosia      mobile             Chrome   \n",
-            "7                               Thomas Jr      tablet  Internet Explorer   \n",
-            "8          Edward Dale (Charlotte Lamson)     desktop             Chrome   \n",
-            "9                                   Ramon      mobile            Firefox   \n",
-            "10                             John Jacob     desktop             Chrome   \n",
-            "11  John Jacob (Madeleine Talmadge Force)      laptop              Opera   \n",
-            "12                       Leontine Pauline      tablet            Firefox   \n",
-            "13                      Ellen \"\"Nellie\"\"\"      mobile            Firefox   \n",
-            "14                  Algernon Henry Wilson      laptop             Chrome   \n",
+            "                                                 name device_type  \\\n",
+            "0                       Allen  Miss. Elisabeth Walton      mobile   \n",
+            "1                      Allison  Master. Hudson Trevor      tablet   \n",
+            "2                        Allison  Miss. Helen Loraine      laptop   \n",
+            "3                Allison  Mr. Hudson Joshua Creighton     desktop   \n",
+            "4     Allison  Mrs. Hudson J C (Bessie Waldo Daniels)      laptop   \n",
+            "5                                 Anderson  Mr. Harry      mobile   \n",
+            "6                   Andrews  Miss. Kornelia Theodosia      mobile   \n",
+            "7                              Andrews  Mr. Thomas Jr      tablet   \n",
+            "8       Appleton  Mrs. Edward Dale (Charlotte Lamson)     desktop   \n",
+            "9                             Artagaveytia  Mr. Ramon      mobile   \n",
+            "10                             Astor  Col. John Jacob     desktop   \n",
+            "11  Astor  Mrs. John Jacob (Madeleine Talmadge Force)      laptop   \n",
+            "12                      Aubart  Mme. Leontine Pauline      tablet   \n",
+            "13                       Barber  Miss. Ellen \"Nellie\"      mobile   \n",
+            "14               Barkworth  Mr. Algernon Henry Wilson      laptop   \n",
             "\n",
-            "       sex  age  bill               region         age_category  \n",
-            "0   female   29   885         St Louis: MO            Старше 25  \n",
-            "1     male   48   850         Montreal: PQ            Старше 25  \n",
-            "2   female   48  1034         Montreal: PQ            Старше 25  \n",
-            "3     male   30   214         Montreal: PQ            Старше 25  \n",
-            "4   female   25   993         Montreal: PQ  Младше или равен 25  \n",
-            "5     male   48   371         New York: NY            Старше 25  \n",
-            "6   female   63  1126           Hudson: NY            Старше 25  \n",
-            "7     male   39   867          Belfast: NI            Старше 25  \n",
-            "8   female   53   552  Bayside: Queens: NY            Старше 25  \n",
-            "9     male   71   926  Montevideo: Uruguay            Старше 25  \n",
-            "10    male   47   100         New York: NY            Старше 25  \n",
-            "11  female   48   254         New York: NY            Старше 25  \n",
-            "12  female   24   587        Paris: France  Младше или равен 25  \n",
-            "13  female   26  1009                    -            Старше 25  \n",
-            "14    male   80   723        Hessle: Yorks            Старше 25  \n"
+            "              browser     sex   age  bill                           region  \\\n",
+            "0              Chrome  female  29.0   885                     St Louis: MO   \n",
+            "1               Opera    male  48.0   850  Montreal: PQ / Chesterville: ON   \n",
+            "2             Firefox  female  48.0  1034  Montreal: PQ / Chesterville: ON   \n",
+            "3   Internet Explorer    male  30.0   214  Montreal: PQ / Chesterville: ON   \n",
+            "4             Firefox  female  25.0   993  Montreal: PQ / Chesterville: ON   \n",
+            "5             Firefox    male  48.0   371                     New York: NY   \n",
+            "6              Chrome  female  63.0  1126                       Hudson: NY   \n",
+            "7   Internet Explorer    male  39.0   867                      Belfast: NI   \n",
+            "8              Chrome  female  53.0   552              Bayside: Queens: NY   \n",
+            "9             Firefox    male  71.0   926              Montevideo: Uruguay   \n",
+            "10             Chrome    male  47.0   100                     New York: NY   \n",
+            "11              Opera  female  48.0   254                     New York: NY   \n",
+            "12            Firefox  female  24.0   587                    Paris: France   \n",
+            "13            Firefox  female  26.0  1009                                -   \n",
+            "14             Chrome    male  80.0   723                    Hessle: Yorks   \n",
+            "\n",
+            "           age_category  \n",
+            "0             Старше 25  \n",
+            "1             Старше 25  \n",
+            "2             Старше 25  \n",
+            "3             Старше 25  \n",
+            "4   Младше или равен 25  \n",
+            "5             Старше 25  \n",
+            "6             Старше 25  \n",
+            "7             Старше 25  \n",
+            "8             Старше 25  \n",
+            "9             Старше 25  \n",
+            "10            Старше 25  \n",
+            "11            Старше 25  \n",
+            "12  Младше или равен 25  \n",
+            "13            Старше 25  \n",
+            "14            Старше 25  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Загрузка данных из CSV-файла\n",
+        "csv_file_path = '/content/web_clients_correct_доп_материал_к_тема_6__7__итоговое_задание.csv'\n",
+        "df = pd.read_csv(csv_file_path)\n",
+        "\n",
+        "# Отбор строк по нескольким условиям\n",
+        "filtered_df = df[(df['sex'] == 'male') & (df['age'] > 30)]\n",
+        "\n",
+        "# Вывод отобранных строк\n",
+        "print(filtered_df)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C7nXrc3Wureg",
+        "outputId": "45147e95-73a3-488b-fb29-7fd205a16383"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                          name device_type            browser  \\\n",
+            "1               Allison  Master. Hudson Trevor      tablet              Opera   \n",
+            "5                          Anderson  Mr. Harry      mobile            Firefox   \n",
+            "7                       Andrews  Mr. Thomas Jr      tablet  Internet Explorer   \n",
+            "9                      Artagaveytia  Mr. Ramon      mobile            Firefox   \n",
+            "10                      Astor  Col. John Jacob     desktop             Chrome   \n",
+            "..                                         ...         ...                ...   \n",
+            "900  Johnston  Master. William Arthur \"Willie\"     desktop             Chrome   \n",
+            "902                     Johnston  Mr. Andrew G      tablet  Internet Explorer   \n",
+            "905                          Jonsson  Mr. Carl     desktop            Firefox   \n",
+            "909                        Jussila  Mr. Eiriik     desktop            Firefox   \n",
+            "914          Karlsson  Mr. Julius Konrad Eugen      laptop              Opera   \n",
+            "\n",
+            "      sex   age  bill                           region  \n",
+            "1    male  48.0   850  Montreal: PQ / Chesterville: ON  \n",
+            "5    male  48.0   371                     New York: NY  \n",
+            "7    male  39.0   867                      Belfast: NI  \n",
+            "9    male  71.0   926              Montevideo: Uruguay  \n",
+            "10   male  47.0   100                     New York: NY  \n",
+            "..    ...   ...   ...                              ...  \n",
+            "900  male  33.0   840                                -  \n",
+            "902  male  33.0   762                                -  \n",
+            "905  male  32.0  1136                                -  \n",
+            "909  male  32.0   280                                -  \n",
+            "914  male  33.0   798                                -  \n",
+            "\n",
+            "[374 rows x 7 columns]\n"
           ]
         }
       ]
